tests/error/13_type_wrong_arg_count.mire
load kioto

pub fn add: (a:i64 b:i64) :i64 {
    return a + b
}

pub fn main: () {
    set x = add()
}